200227a changed fps to =5 (slower animation speed)

--- a/index.html
+++ b/index.html
@@ -2,8 +2,8 @@
 <html>
 <!-- 
 Changes:
-
--Original
+- Changed fps = 15; to lower value
+- Original
 -->
 
 <head>
@@ -85,7 +85,7 @@ Changes:
     	handle_size = 8;
       onion_skins = [];
 		  playback = false;
-		  fps = 15;
+		  fps = 5;
 		  playback_items = [];    
 			init_animation()
 		}
