200227b - changed fps + translated texts

--- a/index.html
+++ b/index.html
@@ -2,12 +2,13 @@
 <html>
 <!-- 
 Changes:
-- Changed fps = 15; to lower value
+- Changed fps = 15; to lower value , μετάφραση
 - Original
 -->
 
 <head>
   <title>Stick2 &alpha;q</title>
+  <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
   <style>
   body{
         font-family: arial, sans-serif;
@@ -1324,29 +1325,29 @@ public_expand_save = function(obj){
   
   <div class="header">
 		
-		<div id="playpause" style="float: left;padding-left:10px;padding-right: 5px" title="play or pause animation">
+		<div id="playpause" style="float: left;padding-left:10px;padding-right: 5px" title="Παίξε ή σταμάτησε το animation">
     <img src="noatunplay.png">
 		</div>
-	<div style="float:left;;padding-right: 5px" onclick="if(confirm('Are you sure you want to create a new animation? Doing so will erase everything on the canvas currently.'))new_animation();" title="create new animation">
+	<div style="float:left;;padding-right: 5px" onclick="if(confirm('Είσαι σίγουρός ότι θέλεις να ξεκινήσεις νέο animation; Αν το κάνεις θα χαθεί ότι δεν έχει αποθηκευτεί.'))new_animation();" title="Φτιάξε Νέο καρτούν">
   <img src="filenew.png">
 	</div>
 	
-	<div style="float:left;;padding-right: 5px" onclick="upload_animation()" title="save animation">
+	<div style="float:left;;padding-right: 5px" onclick="upload_animation()" title="Αποθήκευση animation">
   <img src="svn-commit.png">
 	</div>
 <div style="float:left;padding-right: 5px;" onclick="loadfromurl(prompt('Enter the animation id to load it again'))" title="open animation">
   <img src="document-open-remote.png">
 	</div>
 	
-	<div style="float:left;;padding-right: 5px" onclick="exportGIF()" title="export animation as gif">
+	<div style="float:left;;padding-right: 5px" onclick="exportGIF()" title="Εξαγωγή animation σαν εικόνα gif">
   <img src="image.png">
 	</div>
 	
 	<div style="padding-left: 70px; padding-right: 30px; display:none;float: left" class="infobox"> 
 	
     <div style="background-color: #7ca0a5; -webkit-border-radius: 5px;height: 32px;">
-    <img class="line" src="draw-line.png" title="line">
-    <img class="circle" src="draw-circle.png" title="circle">
+    <img class="line" src="draw-line.png" title="Γραμμή">
+    <img class="circle" src="draw-circle.png" title="Κύκλος">
     </div>
 
 
@@ -1392,7 +1393,7 @@ public_expand_save = function(obj){
         <div style="width: 120px;">
         <span style="font-size: 90px;color: #507D2A;float:left">+</span>
         <br><br>
-        <span>Add new frame</span>
+        <span>Νέα εικόνα</span>
         </div>
         </td>
       </tr>
