--- a/index.html
+++ b/index.html
@@ -953,7 +953,8 @@ $("a").live("click", function(e){
       addFigure("Blank",{"type":"root","pos":[200,200],"angle":0,"children":[{"type":"circle","length":20,"width":20,"color":"#FFA500","angle":0,"children":[]}]},{"type":"root","pos":[200,200],"angle":0,"children":[]}); //blank is a special case
       //for(var i = 0; i < 100; i++){
       addFigure("Stickman",{"type":"root","pos":[200,200],"angle":0,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":110,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":0,"children":[]}]},{"type":"line","length":50,"width":6,"color":"#000","angle":70,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":0,"children":[]}]},{"type":"line","length":60,"width":6,"color":"#000","angle":-90,"children":[{"type":"circle","length":35,"width":6,"color":"#000","angle":0,"children":[]},{"type":"line","length":40,"width":6,"color":"#000","angle":140,"children":[{"type":"line","length":40,"width":6,"color":"#000","angle":10,"children":[]}]},{"type":"line","length":40,"width":6,"color":"#000","angle":-140,"children":[{"type":"line","length":40,"width":6,"color":"#000","angle":-10,"children":[]}]}]}]})
-      
+      addFigure("Μπάλα",{"type":"root","pos":[50,50],"angle":0,"children":[{"type":"circle","length":50,"width":6,"color":"#f00","angle":10,"children":[]}]})
+      addFigure("Μπάλα",{"type":"root","pos":[50,50],"angle":0,"children":[{"type":"circle","length":50,"width":6,"color":"#f00","angle":10,"children":[]}]})
 
       if(localStorage && localStorage.figures){
 	      var lsf = JSON.parse(localStorage.figures)
@@ -1354,9 +1355,9 @@ public_expand_save = function(obj){
 </div>
 		<div id="info" style="float: left">
       <div style="float:left;margin-top: 7px;font-size: large">
-    <span><b>Angle:</b> <span id="angle"></span>&deg;</span>
-    <span><b>Length:</b> <span id="length"></span>px</span>
-    <span><b>Width:</b> <span id="width"></span>px</span>
+    <span><b>Γωνία:</b> <span id="angle"></span>&deg;</span>
+    <span><b>Μήκος:</b> <span id="length"></span>px</span>
+    <span><b>Φάρδος:</b> <span id="width"></span>px</span>
     </div>
     <div style="float:left;margin-left: 10px">
     <span id="color"><img src="fill-color.png"></span>
