--- a/index.html
+++ b/index.html
@@ -954,7 +954,8 @@ $("a").live("click", function(e){
       //for(var i = 0; i < 100; i++){
       addFigure("Stickman",{"type":"root","pos":[200,200],"angle":0,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":110,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":0,"children":[]}]},{"type":"line","length":50,"width":6,"color":"#000","angle":70,"children":[{"type":"line","length":50,"width":6,"color":"#000","angle":0,"children":[]}]},{"type":"line","length":60,"width":6,"color":"#000","angle":-90,"children":[{"type":"circle","length":35,"width":6,"color":"#000","angle":0,"children":[]},{"type":"line","length":40,"width":6,"color":"#000","angle":140,"children":[{"type":"line","length":40,"width":6,"color":"#000","angle":10,"children":[]}]},{"type":"line","length":40,"width":6,"color":"#000","angle":-140,"children":[{"type":"line","length":40,"width":6,"color":"#000","angle":-10,"children":[]}]}]}]})
       addFigure("Μπάλα",{"type":"root","pos":[50,50],"angle":0,"children":[{"type":"circle","length":35,"width":6,"color":"#009","angle":10,"children":[]}]})
-      
+      addFigure("Τετράγωνο",{"type":"root","pos":[256,294],"angle":0,"children":	[{"type":"line","length":50,"width":6,"color":"#000","angle":-90,"children":		[{"type":"line","length":50,"width":6,"color":"#000","angle":90,"children":		[]}]},{"type":"line","length":50,"width":6,"color":"#000","angle":0,"children":			[{"type":"line","length":50,"width":6,"color":"#000","angle":-90,"children":[]}]}]})
+
 
       if(localStorage && localStorage.figures){
 	      var lsf = JSON.parse(localStorage.figures)
